[NOT TESTED] continued work on TSRG updating